# RingIQ

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  package-lock.json  package.json  pyproject.toml  skills-lock.json
_bmad/: config.toml
_bmad-output/implementation-artifacts/: deferred-work.md  heroku-staging-deployment.md  spec-clerk-auth-identity-models.md  spec-platform-user-invitations-clerk-sync.md  spec-post-call-qualification-outcome.md
_bmad-output/planning-artifacts/: organization-activation-first-call-todo.md  ringiq-high-level-architecture.md  ringiq-product-feature-stories.md  ringiq-product-feature-tracker.md  ringiq-service-boundaries.md  ringiq-voice-pipeline-cost-analysis.md  voice-ai-saas-business-requirements.md
_bmad-output/ringiq-product-deck/: index.html  package-lock.json  package.json  tailwind.config.js
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmad-loop/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
apps/: README.md  __init__.py
apps/api/: README.md  __init__.py
apps/voice-worker/: README.md
apps/voice_worker/: README.md  __init__.py  agent.py
apps/web/: .env.example  .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json
apps/worker/: README.md  __init__.py  main.py
docs/: README.md
infra/: README.md
migrations/: env.py
migrations/versions/: 20260717_0001_identity_models.py  20260717_0002_platform_identity.py  20260717_0003_category_templates.py  20260717_0004_tenant_knowledge_base.py  20260717_0005_lead_imports.py  20260718_0006_lead_workspace_management.py  20260718_0007_campaign_operations.py  20260718_0008_tenant_category.py  20260719_0009_call_artifacts.py  20260720_0010_post_call_outcomes.py  20260721_0011_platform_user_invitations.py
scripts/: bootstrap_platform_user.py  clear_db_data.py  seed_demo_tenant_data.py
src/ringiq/: __init__.py  __main__.py
tests/api/: helpers.py  postgres.py  test_bootstrap_platform_user.py  test_campaign_routes.py  test_clerk_auth.py  test_config.py  test_db_session.py  test_knowledge_base_routes.py  test_lead_routes.py  test_livekit_call_service.py  test_me_route.py  test_migrations.py  test_models.py  test_platform_context.py  (+9 more)
(+127 files in other folders)
