[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ringiq"
version = "0.1.0"
description = "RingIQ is a B2B AI voice platform that automatically calls, qualifies, and prioritizes leads using each business's private knowledge base."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "RingIQ" }]

[tool.hatch.build.targets.wheel]
packages = ["src/ringiq"]
